# polkadot-sdk-solochain-template

./: Cargo.toml
pallets/member/: Cargo.toml
pallets/member/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/stake/: Cargo.toml
pallets/stake/src/: lib.rs
pallets/test/: Cargo.toml
pallets/test/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
